--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,14 +30,16 @@ log = "0.3"
 futures = { version = "0.1", optional = true }
 tokio-core = { version = "0.1", optional = true }
 tokio-io = { version = "^0.1.2", optional = true }
-tokio-tls = { version = "0.1", optional = true }
+tokio-rustls = { git = "https://github.com/passchaos/tokio-rustls", branch = "v0.5.0-sdk", optional = true }
+rustls = { version = "0.12.0", optional = true }
 bytes = { version = "0.4", optional = true }
-native-tls = { version = "^0.1.2", optional = true }
+webpki = { version = "=0.18.0-alpha", optional = true }
+webpki-roots = { version = "0.14.0", optional = true }
 
 [features]
 default = ["sync", "sync-ssl", "async", "async-ssl"]
 sync = []
-sync-ssl = ["native-tls", "sync"]
+sync-ssl = ["rustls", "sync"]
 async = ["tokio-core", "tokio-io", "bytes", "futures"]
-async-ssl = ["native-tls", "tokio-tls", "async"]
+async-ssl = ["rustls", "tokio-rustls", "async", "webpki", "webpki-roots"]
 nightly = ["hyper/nightly"]
