--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,11 +30,11 @@ log = "0.4"
 futures = { version = "0.1", optional = true }
 tokio-core = { version = "0.1", optional = true }
 tokio-io = { version = "^0.1.2", optional = true }
-tokio-rustls = { git = "https://github.com/passchaos/tokio-rustls", branch = "v0.5.0-sdk", optional = true }
-rustls = { version = "0.12.0", optional = true }
+tokio-rustls = { version = "0.5.0", optional = true }
+rustls = { version = "0.13.0", optional = true }
 bytes = { version = "0.4", optional = true }
-webpki = { version = "=0.18.0-alpha", optional = true }
-webpki-roots = { version = "0.14.0", optional = true }
+webpki = { version = "0.18.1", optional = true }
+webpki-roots = { version = "0.15.0", optional = true }
 
 [features]
 default = ["sync", "sync-ssl", "async", "async-ssl"]
