--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,14 +34,23 @@ futures = { version = "0.1.19", optional = true }
 bytes = { version = "0.4", optional = true }
 native-tls = { version = "^0.2.1", optional = true }
 hyper = "0.12.0"
+lazy_static = "1.2.0"
+log = "0.4"
+scopeguard = "0.3"
+rustls = { version = "0.14.0", optional = true}
+tokio-rustls = { version = "0.8.0", optional = true }
+webpki = { version = "0.18.1", optional = true }
+webpki-roots = { version = "0.15.0", optional = true }
 
 [dev-dependencies]
 futures-cpupool = "0.1"
 
 [features]
-default = ["sync", "sync-ssl", "async", "async-ssl"]
+# default = ["sync", "sync-ssl", "async", "async-ssl"]
+default = ["sync", "async", "async-rustls"]
 sync = []
 sync-ssl = ["native-tls", "sync"]
 async = ["tokio", "tokio-io", "bytes", "futures"]
+async-rustls = ["rustls", "webpki", "webpki-roots", "tokio-rustls", "async"]
 async-ssl = ["native-tls", "tokio-tls", "async"]
 nightly = []
