--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,9 @@ rustls = { version = "0.14.0", optional = true }
 webpki = { version = "0.18.1", optional = true }
 webpki-roots = { version = "0.15.0", optional = true }
 
+lazy_static = "1.2.0"
+log = "0.4"
+
 [dev-dependencies]
 futures-cpupool = "0.1"
 
