--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,10 +30,10 @@ tokio-tls = { version = "0.2.0", optional = true }
 bytes = { version = "0.4", optional = true }
 native-tls = { version = "0.2.1", optional = true }
 
-tokio-rustls = { version = "0.8.0", optional = true }
-rustls = { version = "0.14.0", optional = true }
-webpki = { version = "0.18.1", optional = true }
-webpki-roots = { version = "0.15.0", optional = true }
+tokio-rustls = { git = "https://github.com/passchaos/tokio-rustls", branch = "v0.8.1-sdk-tmp", optional = true }
+rustls = { version = "0.15.0", optional = true }
+webpki = { version = "0.19.0", optional = true }
+webpki-roots = { version = "0.16.0", optional = true }
 
 lazy_static = "1.2.0"
 log = "0.4"
@@ -52,4 +52,4 @@ async-ssl = ["native-tls", "tokio-tls", "async"]
 nightly = ["hyper/nightly"]
 
 [replace]
-"webpki:0.18.1" = { git = "https://github.com/passchaos/webpki", rev = "251388" }
+"webpki:0.19.0" = { git = "https://github.com/passchaos/webpki", branch = "v0.19.0-sdk-tmp" }
