--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ tokio = { version = "0.1", optional = true }
 tokio-tls = { version = "0.2.0", optional = true }
 bytes = { version = "0.4", optional = true }
 native-tls = { version = "0.2.1", optional = true }
+futures-cpupool = "0.1"
 
 tokio-rustls = { version = "0.8.0", optional = true }
 rustls = { version = "0.14.0", optional = true }
