--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ tokio-tls = { version = "0.2.0", optional = true }
 bytes = { version = "0.4", optional = true }
 native-tls = { version = "0.2.1", optional = true }
 futures-cpupool = "0.1"
-
+tokio-io = "0.1"
 tokio-rustls = { version = "0.8.0", optional = true }
 rustls = { version = "0.14.0", optional = true }
 webpki = { version = "0.18.1", optional = true }
